--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "axios": "^1.7.8",
+    "sweetalert2": "^11.17.2",
     "vue": "^3.5.13",
     "vue-axios": "^3.5.2",
     "vue-router": "^4.0.3",
