--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
   },
   "dependencies": {
     "axios": "^1.7.8",
+    "chart.js": "^4.4.8",
     "sweetalert2": "^11.17.2",
     "vue": "^3.5.13",
     "vue-axios": "^3.5.2",
+    "vue-chartjs": "^5.3.2",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
   },
